completed writing my about me section

--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm 31 years old and I'm hoping to switch career paths with web dev.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I currently reside in a little town in West Virginia, but I've lived in Charlotte, Chicago, Virginia, and even South Korea.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy playing video games (at the moment, Animal Crossing New Horizons and Final Fantasy XIV Online are my two faves), as well as collecting and sending postcards to other people via an online community called <a href="http://postcrossing.com">postcrossing</a>.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>A job where I'm paid well, content with what I'm doing, and is challenging.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in a house with my dad and my cat, Mao.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I've been dabbling in web design since elementary school, and even focused on graphic/web design as a possible career in high school. But overall my love for languages and learning about the world won out and I received a Bachelor's in International Studies. But due to COVID-19 and how unsure the world is, I figured it would be beneficial to start relearning web dev so if I'm stuck in my house, at least I'll get paid.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/ekerseyc">Github</a></li>
         </ul>
     </footer>
 </body>
