completed writing my about me section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <h1>What are your favorite hobbies?</h1>
       <p>I enjoy playing video games (at the moment, Animal Crossing New Horizons and Final Fantasy XIV Online are my two faves), as well as collecting and sending postcards to other people via an online community called <a href="http://postcrossing.com">postcrossing</a>.</p>
       <h1>What's your dream job?</h1>
-      <p>A job where I'm paid well, content with what I'm doing, and is challenging.</p>
+      <p>A job where I'm paid well, where I'm challenged, and content with what I'm doing.</p>
       <h1>Where do you live?</h1>
       <p>I live in a house with my dad and my cat, Mao.</p>
       <h1>Why do you want to be a web developer?</h1>
